--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 influxdb2 = "0.3"
+influxdb2-derive = "0.1"
 influxdb2-structmap = "0.2"
 num-traits = "0.2"
 chrono = { version = "0.4.23", features = ["serde"], default-features = false }
 tokio = { version = "1.0", features = ["full"] }
+futures = "0.3"
